--- a/css/style.css
+++ b/css/style.css
@@ -683,3 +683,18 @@ a:hover {
     width: 110px;
   }
 }
+/* --- 後台資訊列表樣式 --- */
+.info-list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  font-size: 0.9em;
+  text-align: left;
+}
+.info-list li {
+  margin-bottom: 4px;
+}
+.compact-list {
+  padding-left: 15px;
+  margin: 0;
+}
